--- a/ShopWebApp/templates/Search.html
+++ b/ShopWebApp/templates/Search.html
@@ -20,11 +20,11 @@
     <script type="text/javascript" src="assets/js/Gettext.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template -->
-    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Custom fonts for this website -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this website -->
     <link href="../static/css/grayscale.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css" />
 </head>
@@ -86,31 +86,7 @@
     <section id="search" class="search-section">
         <form method="POST" action="{{url_for('Search')}}">
             <div>
-                {% if all_places %}
-                <div class="tg-wrap">
-                    {% for place in all_places %}
-                    <table id="tg-3099d" class="tg">
-                        <tr bgcolor="#606060">
-                            <th class="tg-s268">Place Name: {{place.name}}</th>
-                        </tr>
-                        <tr bgcolor="#606060">
-                            <td class="tg-0lax"><img src="{{place.photo}}" /></td>
-                        </tr>
-                        <tr bgcolor="#606060">
-                            <td class="tg-0lax">Business Type: {{place.type}}</td>
-                        </tr>
-                        <tr bgcolor="#606060">
-                            <td class="tg-0lax">Location: {{place.location}}</td>
-                        </tr>
-                        <tr bgcolor="#606060">
-                            <td class="tg-0lax"><a target="_blank" href="{{place.website}}"> Website</a></td>
-                        </tr>
-                    </table>
-                    {% endfor %}
-                </div>
-                {% else %}
-                <p>Error: {{error_is}}</p>
-                <p>Testsit: {{testsit}}</p>
+                {% if places %}
                 <div class="tg-wrap">
                     {% for place in places %}
                     <table id="tg-3099d" class="tg" align="center">
@@ -127,7 +103,7 @@
                             <td class="tg-0lax">Location: {{place.location}}</td>
                         </tr>
                         <tr bgcolor="#606060">
-                            <td class="tg-0lax"><a target="_blank" href="{{place.website}}"> Website</a></td>
+                            <td class="tg-0lax" style="text-align: center"><a id="{{place.id}}" href="/like"><i class="fas fa-thumbs-up"> </i></a> | <a id="{{place.id}}" href="/dislike"><i class="fas fa-thumbs-down"></i></a></td>
                         </tr>
                     </table>
                     {% endfor %}
