--- a/ShopWebApp/templates/login.html
+++ b/ShopWebApp/templates/login.html
@@ -6,11 +6,11 @@
     <title>Login in- Shop IT</title>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template -->
-    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Custom fonts for this website -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this website -->
     <link href="../static/css/grayscale.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css" />
 </head>
