updated to the final version

--- a/ShopWebApp/templates/About.html
+++ b/ShopWebApp/templates/About.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Shop It is a place where you can find close stores to your location">
+    <meta name="author" content="Yassine Ennaour">
+
     <title>About Us - Shop IT</title>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +69,6 @@
                     </p>
                 </div>
             </div>
-            <img src="..static/img/ipad.png" class="img-fluid" alt="">
         </div>
     </section>
     <div id="id01" class="modal">
