--- a/ShopWebApp/templates/register.html
+++ b/ShopWebApp/templates/register.html
@@ -2,7 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Shop It is a place where you can find close stores to your location">
+    <meta name="author" content="Yassine Ennaour">
+
     <title>Sign Up - Shop IT</title>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +80,7 @@
                     <label for="uname"><b>Username</b></label>
                     <input id="sign-name" type="text" placeholder="Enter Username" name="username" required>
 
-                    <label for="psw"><b>Password</b></label>
+                    <label for="psw"><b>Password(6 chars at least)</b></label>
                     <input id="sign-pass" type="password" placeholder="Enter Password" name="password" required>
 
                     <button id="sign-btn" type="submit">Sign Up</button>
