--- a/ShopWebApp/templates/Contact.html
+++ b/ShopWebApp/templates/Contact.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Shop It is a place where you can find close stores to your location">
+    <meta name="author" content="Yassine Ennaour">
+
     <title>Contact Us - Shop IT</title>
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
