--- a/ShopWebApp/templates/Dashboard.html
+++ b/ShopWebApp/templates/Dashboard.html
@@ -68,5 +68,51 @@
             </div>
         </div>
     </nav>
+    <div class="container-sign">
+        <div>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="alert">
+                <ul class="flashes">
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+            {% endwith %}
+        </div>
+    <section id="dashboard" class="dashboard-section">
+        <form method="POST" action="{{url_for('Search')}}">
+            <div>
+                <a href="/deleteAll">Delete all saved places</a>
+                {% if Place %}
+                <div class="tg-wrap">
+                    {% for place in Place %}
+                    <table id="tg-3099d" class="tg" align="center">
+                        <tr bgcolor="#606060">
+                            <th class="tg-s268">Place Name: {{place.name}}</th>
+                        </tr>
+                        <tr bgcolor="#606060">
+                            <td class="tg-0lax"><img src="{{place.photo}}" /></td>
+                        </tr>
+                        <tr bgcolor="#606060">
+                            <td class="tg-0lax">Business Type: {{place.type}}</td>
+                        </tr>
+                        <tr bgcolor="#606060">
+                            <td class="tg-0lax">Location: {{place.location}}</td>
+                        </tr>
+                        <tr bgcolor="#606060">
+                            <td class="tg-0lax" style="text-align: center"><a href="/dislike?id={{place.id}}&name={{place.name}}&location={{place.location}}&photo={{place.photo}}&type={{place.type}}">Dislike</a></td>
+                        </tr>
+                    </table>
+                    {% endfor %}
+                {% else %}
+                    <a style="color:white"> no places saved</a>
+                </div>
+                {% endif %}
+            </div>
+        </form>
+    </section>
 </body>
 </html>
