--- a/ShopWebApp/templates/Search.html
+++ b/ShopWebApp/templates/Search.html
@@ -93,7 +93,7 @@
                     {% for place in places %}
                     <table id="tg-3099d" class="tg" align="center">
                         <tr bgcolor="#606060">
-                            <th class="tg-s268">Place Name: {{place.name}}</th>
+                            <th class="tg-0lax">Place Name: {{place.name}}</th>
                         </tr>
                         <tr bgcolor="#606060">
                             <td class="tg-0lax"><img src="{{place.photo}}" /></td>
