--- a/ShopWebApp/templates/login.html
+++ b/ShopWebApp/templates/login.html
@@ -70,10 +70,10 @@
         </div>
         <div class="container-signup">
             <form method=POST action="{{ url_for('login') }}">
-                <label for="uname"><b>Username</b></label>
+                <label for="uname"><b>Email Address:</b></label>
                 <input id="sign-name" type="email" placeholder="Enter Email Address" name="email" required>
 
-                <label for="psw"><b>Password</b></label>
+                <label for="psw"><b>Password:</b></label>
                 <input id="sign-pass" type="password" placeholder="Enter Password" name="password" required>
 
                 <button id="sign-btn" type="submit">Login In</button>
